Enhance CORS configuration in SecurityConfig
Updated CORS configuration to explicitly list allowed origins, include PATCH method, replace wildcard headers with explicit ones, and expose Authorization header.